[package]
name = "torexpo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission = "0.3.1"
async-graphql = "4.0"
async-graphql-axum = "4.0"
tokio = { version = "1", features = ["full"] }
dashmap = "5.3.4"
axum = { version = "0.5.1", features = ["ws", "headers"] }
tokio-stream = "0.1.9"
futures-util = "0.3.23"
bincode = "1.3.3"
async-stream = "0.3.3"
