[package]
name = "torexpo"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission = { git = "https://github.com/deep-gaurav/transmission.git" }
async-graphql = { version = "4.0", features = ["chrono"] }
async-graphql-axum = "4.0"
tokio = { version = "1", features = ["full"] }
dashmap = "5.3.4"
axum = { version = "0.5.1", features = ["ws", "headers"] }
tokio-stream = "0.1.9"
futures-util = "0.3.23"
bincode = "1.3.3"
async-stream = "0.3.3"
tempfile = "3.3.0"
log = "0.4"
pretty_env_logger = "0.4.0"
chrono = "0.4.22"
tower-http = { version = "0.3.4", features = ["fs"] }
tower = "0.4.13"

[profile.release]
lto = true
codegen-units = 1
